[gd_scene load_steps=11 format=3 uid="uid://fbqj64rsof5p"]

[ext_resource type="Script" path="res://Resources/Scripts/UI/Menu/World.gd" id="1_q5m4e"]
[ext_resource type="Texture2D" uid="uid://db4jyx124anwg" path="res://Resources/Sprites/Backgrounds/1083.jpg" id="2_uj7h0"]
[ext_resource type="PackedScene" uid="uid://ds2s6of2q65c1" path="res://Resources/Scenes/UI/Menu/MapItem.tscn" id="3_tarpr"]
[ext_resource type="Script" path="res://Resources/Scripts/UI/Menu/MapSelectorGridContainer.gd" id="3_ww2ej"]
[ext_resource type="Texture2D" uid="uid://bkwcxuob4ldhr" path="res://Resources/Sprites/Backgrounds/0.png" id="5_m20j2"]
[ext_resource type="Texture2D" uid="uid://cm75i8quq0ovv" path="res://Resources/Sprites/Backgrounds/9.png" id="6_6ey65"]
[ext_resource type="Texture2D" uid="uid://cnvcts58l1p7h" path="res://Resources/Sprites/Backgrounds/10.png" id="7_bv5le"]
[ext_resource type="Texture2D" uid="uid://ig4k2lbnwgmc" path="res://Resources/Sprites/Backgrounds/11.png" id="8_neys8"]
[ext_resource type="Texture2D" uid="uid://dtao8gm166wmx" path="res://Resources/Sprites/Backgrounds/12.png" id="9_cbngk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vq6fk"]
content_margin_left = 29.0
content_margin_top = 60.0

[node name="World" type="Node2D"]
script = ExtResource("1_q5m4e")

[node name="1083" type="Sprite2D" parent="."]
position = Vector2(608.989, 324)
scale = Vector2(0.208026, 0.208026)
texture = ExtResource("2_uj7h0")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="UIContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_constants/separation = 40

[node name="MapSelectorContainer" type="BoxContainer" parent="Control/UIContainer"]
layout_mode = 2
alignment = 1

[node name="MapSelectorPannel" type="PanelContainer" parent="Control/UIContainer/MapSelectorContainer"]
custom_minimum_size = Vector2(1000, 500)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_vq6fk")

[node name="MapSelectorGridContainer" type="GridContainer" parent="Control/UIContainer/MapSelectorContainer/MapSelectorPannel"]
layout_mode = 2
theme_override_constants/h_separation = 322
theme_override_constants/v_separation = 225
columns = 3
script = ExtResource("3_ww2ej")

[node name="MapItem" parent="Control/UIContainer/MapSelectorContainer/MapSelectorPannel/MapSelectorGridContainer" instance=ExtResource("3_tarpr")]
layout_mode = 2

[node name="TextureRect" parent="Control/UIContainer/MapSelectorContainer/MapSelectorPannel/MapSelectorGridContainer/MapItem/Button/VBoxContainer" index="0"]
texture = ExtResource("5_m20j2")

[node name="Label" parent="Control/UIContainer/MapSelectorContainer/MapSelectorPannel/MapSelectorGridContainer/MapItem/Button/VBoxContainer" index="1"]
text = "City Dawn"

[node name="MapItem2" parent="Control/UIContainer/MapSelectorContainer/MapSelectorPannel/MapSelectorGridContainer" instance=ExtResource("3_tarpr")]
layout_mode = 2

[node name="Label" parent="Control/UIContainer/MapSelectorContainer/MapSelectorPannel/MapSelectorGridContainer/MapItem2/Button/VBoxContainer" index="1"]
text = "City Day"

[node name="MapItem3" parent="Control/UIContainer/MapSelectorContainer/MapSelectorPannel/MapSelectorGridContainer" instance=ExtResource("3_tarpr")]
layout_mode = 2

[node name="TextureRect" parent="Control/UIContainer/MapSelectorContainer/MapSelectorPannel/MapSelectorGridContainer/MapItem3/Button/VBoxContainer" index="0"]
texture = ExtResource("6_6ey65")

[node name="Label" parent="Control/UIContainer/MapSelectorContainer/MapSelectorPannel/MapSelectorGridContainer/MapItem3/Button/VBoxContainer" index="1"]
text = "City Dusk"

[node name="MapItem4" parent="Control/UIContainer/MapSelectorContainer/MapSelectorPannel/MapSelectorGridContainer" instance=ExtResource("3_tarpr")]
layout_mode = 2

[node name="TextureRect" parent="Control/UIContainer/MapSelectorContainer/MapSelectorPannel/MapSelectorGridContainer/MapItem4/Button/VBoxContainer" index="0"]
texture = ExtResource("7_bv5le")

[node name="Label" parent="Control/UIContainer/MapSelectorContainer/MapSelectorPannel/MapSelectorGridContainer/MapItem4/Button/VBoxContainer" index="1"]
text = "City Night"

[node name="MapItem5" parent="Control/UIContainer/MapSelectorContainer/MapSelectorPannel/MapSelectorGridContainer" instance=ExtResource("3_tarpr")]
layout_mode = 2

[node name="TextureRect" parent="Control/UIContainer/MapSelectorContainer/MapSelectorPannel/MapSelectorGridContainer/MapItem5/Button/VBoxContainer" index="0"]
texture = ExtResource("8_neys8")

[node name="Label" parent="Control/UIContainer/MapSelectorContainer/MapSelectorPannel/MapSelectorGridContainer/MapItem5/Button/VBoxContainer" index="1"]
text = "City Fog"

[node name="MapItem6" parent="Control/UIContainer/MapSelectorContainer/MapSelectorPannel/MapSelectorGridContainer" instance=ExtResource("3_tarpr")]
layout_mode = 2

[node name="TextureRect" parent="Control/UIContainer/MapSelectorContainer/MapSelectorPannel/MapSelectorGridContainer/MapItem6/Button/VBoxContainer" index="0"]
texture = ExtResource("9_cbngk")

[node name="Label" parent="Control/UIContainer/MapSelectorContainer/MapSelectorPannel/MapSelectorGridContainer/MapItem6/Button/VBoxContainer" index="1"]
text = "City Clouds"

[node name="GeneralButtonsContainer" type="BoxContainer" parent="Control/UIContainer"]
layout_mode = 2
alignment = 1

[node name="Button" type="Button" parent="Control/UIContainer/GeneralButtonsContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
text = "Back"

[connection signal="pressed" from="Control/UIContainer/MapSelectorContainer/MapSelectorPannel/MapSelectorGridContainer/MapItem/Button" to="." method="_on_button1_pressed"]
[connection signal="pressed" from="Control/UIContainer/MapSelectorContainer/MapSelectorPannel/MapSelectorGridContainer/MapItem2/Button" to="." method="_on_button2_pressed"]
[connection signal="pressed" from="Control/UIContainer/MapSelectorContainer/MapSelectorPannel/MapSelectorGridContainer/MapItem3/Button" to="." method="_on_button3_pressed"]
[connection signal="pressed" from="Control/UIContainer/MapSelectorContainer/MapSelectorPannel/MapSelectorGridContainer/MapItem4/Button" to="." method="_on_button4_pressed"]
[connection signal="pressed" from="Control/UIContainer/MapSelectorContainer/MapSelectorPannel/MapSelectorGridContainer/MapItem5/Button" to="." method="_on_button5_pressed"]
[connection signal="pressed" from="Control/UIContainer/MapSelectorContainer/MapSelectorPannel/MapSelectorGridContainer/MapItem6/Button" to="." method="_on_button6_pressed"]
[connection signal="pressed" from="Control/UIContainer/GeneralButtonsContainer/Button" to="." method="_on_button_pressed"]

[editable path="Control/UIContainer/MapSelectorContainer/MapSelectorPannel/MapSelectorGridContainer/MapItem"]
[editable path="Control/UIContainer/MapSelectorContainer/MapSelectorPannel/MapSelectorGridContainer/MapItem2"]
[editable path="Control/UIContainer/MapSelectorContainer/MapSelectorPannel/MapSelectorGridContainer/MapItem3"]
[editable path="Control/UIContainer/MapSelectorContainer/MapSelectorPannel/MapSelectorGridContainer/MapItem4"]
[editable path="Control/UIContainer/MapSelectorContainer/MapSelectorPannel/MapSelectorGridContainer/MapItem5"]
[editable path="Control/UIContainer/MapSelectorContainer/MapSelectorPannel/MapSelectorGridContainer/MapItem6"]
